<resources>
    <string name="app_name">VirusNews</string>
    <string name="Home">主页</string>
    <string name="VirusInformation">疫情信息</string>
    <string name="Person">本地新闻</string>
    <string name="MenuClassification">分类列表</string>
    <string name="MenuSearch">搜索</string>
    <string name="Exercise1">Exercise1:此界面包含RecyclerView中的新闻概要，点击可以看新闻详情</string>
    <string name="Exercise2">Exercise2:此界面包含LinearLayout中的疫情数据、疫情图谱、新闻聚类、知疫学者</string>
    <string name="Exercise3">Exercise3:此界面包含LinearLayout中的历史记录、本地新闻</string>
    <string name="VirusData">疫情数据</string>
    <string name="VirusAtlas">疫情图谱</string>
    <string name="NewsCluster">新闻聚类</string>
    <string name="VirusScholar">知疫学者</string>
    <string name="History">历史记录</string>
    <string name="LocalNews">本地新闻</string>
    <string name="Back">返回</string>
    <string name="ClearSearch">清除搜索记录</string>
    <string name="CategoryItem">分类标签</string>
    <string name="AdditionItem">我的分类</string>
    <string name="DeletionItem">其它分类</string>
    <string name="Confirm">确定</string>
    <string name="WorldVirusData">世界疫情数据统计</string>
    <string name="ChinaVirusData">全国疫情数据统计</string>
    <string name="SearchVirusAtlas">疫情图谱查询</string>
    <string name="Aoligei">奥利给</string>
    <string name="Share">分享</string>
    <string name="ClusterResult">新闻聚类结果</string>
</resources>