<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_virus_information_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="100dp">

    <Button
        android:id="@+id/virus_data_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/VirusData"
        android:textAllCaps="false"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/virus_atlas_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/VirusAtlas"
        android:textColor="#FF9800"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/news_cluster_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NewsCluster"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="bold" />

</androidx.appcompat.widget.LinearLayoutCompat>