<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity"
    android:tag="skin:grid_background:background"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <LinearLayout
            android:id="@+id/category_linear_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="14.0dip" >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:tag="skin:TextFont:textColor"
                android:text="@string/AdditionItem"
                android:textColor="#3F51B5"
                android:textSize="20sp"
                android:textStyle="bold" />


            <com.java.liuyun.CategoryGridView
                android:id="@+id/addition_grid_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:horizontalSpacing="5dp"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:scrollbars="vertical"
                android:stretchMode="columnWidth"
                android:verticalSpacing="3dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:tag="skin:TextFont:textColor"
                android:text="@string/DeletionItem"
                android:textColor="#3F51B5"
                android:textSize="20sp"
                android:textStyle="bold" />


            <com.java.liuyun.CategoryGridView
                android:id="@+id/deletion_grid_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:horizontalSpacing="5dp"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:scrollbars="vertical"
                android:stretchMode="columnWidth"
                android:verticalSpacing="3dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/category_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#9C27B0"
        android:text="@string/Confirm"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
</RelativeLayout>